--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && cross-env NODE_ENV=development webpack serve --open",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && cross-env NODE_ENV=production webpack",
     "format": "prettier --write '**/*.js' --ignore-path .gitignore",
     "lint": "eslint -c .eslintrc  --fix $(git diff --name-only remotes/origin/master... --diff-filter=d | grep -E \"(.js$|.ts$|.tsx$|.jsx)\")",
     "test": "jest",
